--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 *.pyc
 .DS_Store
 .ipynb_checkpoints
+.idea
 checkpoint
 logs/*
 tf_logs/*
@@ -14,10 +15,4 @@ my_*
 person.proto
 person.desc
 person_pb2.py
-datasets/flowers
-datasets/lifesat/lifesat.csv
-datasets/spam
-datasets/titanic
-datasets/words
-datasets/jsb_chorales
 
