--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 .DS_Store
 .ipynb_checkpoints
 .idea/
+.vscode/
 checkpoint
 logs/*
 tf_logs/*
@@ -16,3 +17,4 @@ person.proto
 person.desc
 person_pb2.py
 .spyproject
+notes/
